--- a/portfolio2022/package.json
+++ b/portfolio2022/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio2022",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://portfolio-2022-352704.du.r.appspot.com/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
